Chore: application-oauth.yml Add, .gitignore에 추가.
OAuth APIKEY 저장할 yml 파일 생성 및 yml 파일 .gitignore에 추가

--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: Abcd123!
+    password: 1234
+    ##Abcd123!
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -13,3 +14,6 @@ spring:
     hibernate:
       ddl-auto: update
     generate-ddl: true
+
+  profiles:
+    include: oauth
