Feat: OAuth 로그인 베이스 구현 Google OAuth2.0 로그인 베이스 구현 현재 이름, 이메일, 이미지 uri만 받아서 test DB 저장

--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // 2023-10-17[에이디] : oauth 소셜 로그인 관련 의존 추가
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
