🚚 Chore : dockerfile 수정
웹 이미지 도커허브에서 갖고오도록 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     ports:
       - 3308:3306
   application:
-    build:
-      context: ./spring
+    image: jh0903/please-server
     restart: always
     ports:
       - 80:8080
