--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Build with Gradle  
       run: |
         cd spring
+        chmod +x ./gradlew
         ./gradlew build
     # - name: Build with Gradle
     #   uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
