--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,8 +46,8 @@ jobs:
     - name: web docker build and push
       run: |
         docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-        docker build -t jh0903/please-server ./spring
-        docker push jh0903/please-server
+        docker build -t ${{ secrets.DOCKER_REPO }}/please-server ./spring
+        docker push ${{ secrets.DOCKER_REPO }}/please-server
 
     ## docker compose up
     - name: executing remote ssh commands using password
@@ -58,6 +58,6 @@ jobs:
         key: ${{ secrets.EC2_KEY }}
         script: |
           sudo docker rm -f $(docker ps -qa)
-          sudo docker pull jh0903/please-server
+          sudo docker pull ${{ secrets.DOCKER_REPO }}/please-server
           docker-compose up -d
           docker image prune -f
