--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,5 +59,5 @@ jobs:
         script: |
           sudo docker rm -f $(docker ps -qa)
           sudo docker pull ${{ secrets.DOCKER_REPO }}/please-server
-          docker-compose up -d
+          docker-compose -f ~/project-please-back/docker-compose.yml up -d
           docker image prune -f
