--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -4,16 +4,19 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: 1234
-    ##Abcd123!
+    password: Abcd123!
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
+    defer-datasource-initialization: true
     generate-ddl: true
+  sql:
+    init:
+      mode: always
 
   profiles:
     include: oauth
