--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,12 +22,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '17'
+        distribution: 'adopt' # See 'Supported distributions' for available options
     - name: init with Gradle
       uses: gradle/gradle-build-action@v2
     - run: gradle init
