--- a/spring/src/main/resources/application-oauth.yml
+++ b/spring/src/main/resources/application-oauth.yml
@@ -7,5 +7,17 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
             scope:
-            - profile
-            - email
+              - profile
+              - email
+
+cloud:
+  aws:
+    region:
+      static: ap-northeast-2
+    s3:
+      bucket: ${AWS_BUCKET_NAME}
+    stack:
+      auto: false
+    credentials:
+      secret-key: ${AWS_SECRET_KEY}
+      access-key: ${AWS_ACCESS_KEY}
