✨ Feat : 경력, 자격증, 이력서, 공고 API 작성 및 수정
경력, 자격증 API 작성
이력서, 공고 API 수정
기본적인 CRUD API 생성, 공고는 구인자가 등록한 공고 리스트 조회API 추가

--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -14,9 +14,17 @@ spring:
       ddl-auto: create
     defer-datasource-initialization: true
     generate-ddl: true
+    properties:
+      hibernate:
+        format_sql: true
   sql:
     init:
       mode: always
 
   profiles:
     include: oauth
+
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
