--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,51 +6,50 @@ env:
   APP_NAME: ${{ secrets.DOCKERHUB_FLASK_REPO }}/please-server
 on:
   push:
-    branches: [ "main", "dev-flask" ]
+    branches: ["main", "dev-flask"]
   pull_request:
-    branches: [ "main", "dev-flask" ]
+    branches: ["main", "dev-flask"]
 
 permissions:
   contents: read
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
-    - name: Install dependencies
-      run: |
-        cd flask
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_FLASK_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_FLASK_PASSWORD }}
-    - name: Build Docker image
-      run: | 
-        docker build ${{ env.APP_NAME }} ./flask
-        docker tag ${{ env.APP_NAME }}:latest ${{ env.APP_NAME }}:latest
-    - name: Push Docker image  
-      run: |
-        docker push ${{ env.APP_NAME }}:latest
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          cd flask
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      # - name: Test with pytest
+      #   run: |
+      #     pytest
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_FLASK_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_FLASK_PASSWORD }}
+      - name: Build Docker image
+        run: |
+          docker build ${{ env.APP_NAME }} ./flask
+          docker tag ${{ env.APP_NAME }}:latest ${{ env.APP_NAME }}:latest
+      - name: Push Docker image
+        run: |
+          docker push ${{ env.APP_NAME }}:latest
 
   # deploy:
   #   needs: build
@@ -58,15 +57,15 @@ jobs:
   #   steps:
   #   - name: Deploy to EC2
   #     env:
-  #       PRIVATE_KEY: ${{ secrets.SERVER_PRIVATE_KEY }}  
+  #       PRIVATE_KEY: ${{ secrets.SERVER_PRIVATE_KEY }}
   #       USER_NAME: ${{ secrets.SERVER_USER }}
-  #       HOST_NAME: ${{ secrets.SERVER_HOST}}  
-  #     run: |   
-  #       ssh -o StrictHostKeyChecking=no -i "$PRIVATE_KEY" ${USER_NAME}@${HOST_NAME} <<EOF    
-  #       docker pull ${{ env.APP_NAME }}:latest  
-  #       docker stop $(docker ps -a -q)  
-  #       docker system prune -af  
-  #       docker-compose up -d     
+  #       HOST_NAME: ${{ secrets.SERVER_HOST}}
+  #     run: |
+  #       ssh -o StrictHostKeyChecking=no -i "$PRIVATE_KEY" ${USER_NAME}@${HOST_NAME} <<EOF
+  #       docker pull ${{ env.APP_NAME }}:latest
+  #       docker stop $(docker ps -a -q)
+  #       docker system prune -af
+  #       docker-compose up -d
   #       exit
 
   #   ## docker compose up
