--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: Abcd123!
+    password: root
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
