--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,32 +51,15 @@ jobs:
         run: |
           docker push ${{ env.APP_NAME }}:latest
 
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Deploy to EC2
-  #     env:
-  #       PRIVATE_KEY: ${{ secrets.SERVER_PRIVATE_KEY }}
-  #       USER_NAME: ${{ secrets.SERVER_USER }}
-  #       HOST_NAME: ${{ secrets.SERVER_HOST}}
-  #     run: |
-  #       ssh -o StrictHostKeyChecking=no -i "$PRIVATE_KEY" ${USER_NAME}@${HOST_NAME} <<EOF
-  #       docker pull ${{ env.APP_NAME }}:latest
-  #       docker stop $(docker ps -a -q)
-  #       docker system prune -af
-  #       docker-compose up -d
-  #       exit
-
-  #   ## docker compose up
-  #   - name: executing remote ssh commands using password
-  #     uses: appleboy/ssh-action@master
-  #     with:
-  #       host: ${{ secrets.EC2_HOST }}
-  #       username: ubuntu
-  #       key: ${{ secrets.EC2_KEY }}
-  #       script: |
-  #         sudo docker rm -f $(docker ps -qa)
-  #         sudo docker pull ${{ env.APP_NAME }}
-  #         docker-compose -f ~/project-please-back/docker-compose.yml up -d
-  #         docker image prune -f
+      ## docker compose up
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            sudo docker rm -f $(docker ps -qa)
+            sudo docker pull ${{ secrets.DOCKER_REPO }}/please-server
+            docker-compose -f ~/project-please-back/docker-compose.yml up -d
+            docker image prune -f
