--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main", "dev-spring" ]
+    branches: [ "dev-spring" ]
   pull_request:
-    branches: [ "main", "dev-spring" ]
+    branches: [ "dev-spring" ]
 
 permissions:
   contents: read
