chore: init branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-/.idea/compiler.xml
-/.idea/.name
-/.idea/gradle.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/jarRepositories.xml
-/.idea/modules/please.main.iml
+.idea
