--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,63 @@
 version: "3"
 services:
 
+  mysql_db:
+    image: mysql:latest
+    restart: always
+    hostname: mysqlHost
+    environment:
+      - MYSQL_DATABASE=test
+      - MYSQL_ROOT_USER=root
+      - MYSQL_ROOT_PASSWORD=root
+    command: [
+      '--character-set-server=utf8mb4',
+      '--collation-server=utf8mb4_unicode_ci'
+    ]
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "mysqlHost", "--silent" ]
+      interval: 3s
+      retries: 5
+    expose:
+      - 3306
+      - 33060
+
+  app_spring:
+    hostname: springHost
+    image: jh0903/please-server
+#    build:
+#      context: spring
+    restart: always
+    expose:
+      - 8080
+    depends_on:
+      mysql_db:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysqlHost:3306/test?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+
+  app_flask:
+    hostname: flaskHost
+#    build: flask
+    image: oomia/please-server
+    restart: always
+    expose:
+      - 8000
+    environment:
+      FLASK_APP: "main.py"
+      FLASK_ENV: "production"
+      FLASK_RUN_PORT: "8000"
+      SPRING_RUN_PORT: "8080"
+    depends_on:
+      mysql_db:
+        condition: service_healthy
+      app_spring:
+        condition: service_started
+
   reverse_proxy:
     image: nginx:latest
-    restart: no
+    restart: always
     ports:
       - "80:80"
     depends_on:
@@ -13,51 +67,3 @@ services:
         condition: service_started
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
-
-
-  app_spring:
-    hostname: springHost
-    image: jh0903/please-server
-    restart: no
-    expose:
-      - 8080
-    depends_on:
-      mysql_db:
-        condition: service_healthy
-    container_name: app
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysqlHost:3306/test?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-
-  app_flask:
-    hostname: flaskHost
-    image: oomia/please-server
-    restart: no
-    expose:
-      - 8000
-    depends_on:
-      mysql_db:
-        condition: service_healthy
-    container_name: app_flask
-    environment:
-      FLASK_APP: main.py
-      FLASK_ENV: production
-      FLASK_RUN_PORT: 8000
-      SPRING_RUN_PORT: 8080
-
-  mysql_db:
-    image: mysql
-    restart: no
-    hostname: mysqlHost
-    environment:
-      - MYSQL_DATABASE=test
-      - MYSQL_ROOT_HOST=root
-      - MYSQL_ROOT_PASSWORD=root
-    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
-    healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "mysqlHost", "--silent" ]
-      interval: 3s
-      retries: 5
-    expose:
-      - 3306
