--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: deployment
-
+env:
+  FLASK_APP_NAME: ${{ secrets.DOCKERHUB_FLASK_REPO }}/please-server
+  
 on:
   push:
     branches: ["main"]
@@ -73,11 +75,11 @@ jobs:
         password: ${{ secrets.DOCKERHUB_FLASK_PASSWORD }}
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.APP_NAME }} ./flask
-        docker tag ${{ env.APP_NAME }}:latest ${{ env.APP_NAME }}:latest
+        docker build -t ${{ env.FLASK_APP_NAME }} ./flask
+        docker tag ${{ env.FLASK_APP_NAME }}:latest ${{ env.APP_NAME }}:latest
     - name: Push Docker image
       run: |
-        docker push ${{ env.APP_NAME }}:latest
+        docker push ${{ env.FLASK_APP_NAME }}:latest
 
 
     # deployment
