--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,5 +89,7 @@ jobs:
         script: |
           sudo docker rm -f $(docker ps -qa)
           sudo docker pull ${{ secrets.DOCKER_REPO }}/please-server
+          sudo docker pull ${{ env.FLASK_APP_NAME }}
+          sudo docker pull nginx
           docker-compose -f ~/project-please-back/docker-compose.yml up -d
           docker image prune -f
