--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Remove Docker Compose cache
+      run: rm -f docker-compose.yml
 
     # build spring
     - name: Set up JDK 17
