--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
         docker push ${{ secrets.DOCKER_REPO }}/please-server
 
     # build python
-    - uses: actions/checkout@v3
+    # - uses: actions/checkout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
