--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,8 @@ services:
         condition: service_started
 
   reverse_proxy:
-    image: nginx:latest
-    restart: always
+    build: proxy
+    restart: no
     ports:
       - "80:80"
     depends_on:
@@ -65,5 +65,4 @@ services:
         condition: service_started
       app_flask:
         condition: service_started
-    volumes:
-      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+
