--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,9 @@ services:
         condition: service_started
 
   reverse_proxy:
-    build: proxy
-    restart: no
+    # build: proxy
+    image: oomia/please-reverse-proxy
+    restart: always
     ports:
       - "80:80"
     depends_on:
