--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     location /spring {
       rewrite ^/spring/(.*)$ /$1 break;
-      proxy_pass http://springHost:8080;
+      proxy_pass http://localhost:8080;
     }
 
     location /flask {
