--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -12,11 +12,12 @@ http {
   server { # reverse proxy for a local httpbin
     listen          80;
     server_name     http.bin;
-    access_log      /dev/null;
+#     access_log      /dev/null;
 
     location /spring {
       rewrite ^/spring/(.*)$ /$1 break;
-      proxy_pass http://localhost:8080;
+      proxy_set_header Host springHost;
+      proxy_pass http://springHost:8080;
     }
 
     location /flask {
@@ -24,4 +25,5 @@ http {
       proxy_pass http://flaskHost:8000;
     }
   }
+
 }
