--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - 33060
 
   app_spring:
+    hostname: springHost
     image: jh0903/please-server
 #    build:
 #      context: spring
@@ -60,6 +61,7 @@ services:
     restart: always
     ports:
       - "80:80"
+      - "8080"
     depends_on:
       app_spring:
         condition: service_started
