--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,16 +25,13 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             pwd 
+            rm -rf ~/project-please-back/docker-compose.yml
             git clone https://github.com/KDT-BokJob/project-please-back.git
-            sudo find ./ -type f -name "docker-compose.yml"
-
-            cd ~/project-please-back
+            cat ~/project-please-back/docker-compose.yml
             
             docker rm -f project-please-back_reverse_proxy_1
             docker rm -f project-please-back_app_flask_1
             docker rm -f project-please-back_app_spring_1
             docker image prune
             docker volume prune
-            
-            cat ~/project-please-back/docker-compose.yml
             docker-compose -f ~/project-please-back/docker-compose.yml up -d
