Update docker-compose.yml (#44)
* Update docker-compose.yml

* Update release.yml

* 🐛 Fix : 배포 환경 설정

* 🐛 Fix : docker composing

* 🐛 Fix : docker composing

* 🐛 Fix : image/volume prune setting

* 🐛 Fix : remove image building process

* 🐛 Fix : docker compose ci/cd

- git clone 방식
- explicit docker rm

* ✅ Test : GitHub Actions 환경 분석

* 🐛 Fix : replace current composing file

* 🐛 Fix : replace folder

* 🐛 Fix : run `rm -f` as sudo

* Update docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
 #    build:
 #      context: spring
     restart: always
-    expose:
-      - 8080
+    ports:
+      - "8080:8080"
     depends_on:
       mysql_db:
         condition: service_healthy
@@ -56,8 +56,9 @@ services:
         condition: service_started
 
   reverse_proxy:
-    build: proxy
-    restart: no
+    # build: proxy
+    image: oomia/please-reverse-proxy
+    restart: "always"
     ports:
       - "80:80"
     depends_on:
@@ -65,4 +66,3 @@ services:
         condition: service_started
       app_flask:
         condition: service_started
-
