--- a/spring/src/main/resources/application-oauth.yml
+++ b/spring/src/main/resources/application-oauth.yml
@@ -6,7 +6,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri : https://project-please-front-git-develop-taemin-jangs-projects.vercel.app
+            redirect-uri : http://kdt-please.store/login/oauth2/code/google
             scope:
               - profile
               - email
